--- a/PyRTSPRecorder/index.html
+++ b/PyRTSPRecorder/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RECORDER SERVER</title>
+    <title>RTSP ARCHIVE</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
@@ -164,7 +164,6 @@
             color: white;
         }
 
-        /* Стили для плеера под файлом */
         .video-row {
             display: none;
             background-color: #000;
@@ -214,8 +213,8 @@
     </style>
 </head>
 <body>
-    <h1>🎬 CAMERA ARCHIVE</h1>
-    <div class="subtitle">Camera view server</div>
+    <h1>🎬 RTSP Recorder Archive</h1>
+    <div class="subtitle">Web view player for CCTV archive</div>
 
     <div class="breadcrumbs">
         {{BREADCRUMBS}}
@@ -257,10 +256,8 @@
         }
 
         function createVideoRow(fileRow, fileName, filePath, videoUrl) {
-            // Создаём уникальный ID для видео-строки
             const videoRowId = 'video-row-' + Date.now();
 
-            // Создаём новую строку для видео
             const videoRow = document.createElement('tr');
             videoRow.className = 'video-row';
             videoRow.id = videoRowId;
@@ -279,7 +276,6 @@
                 </td>
             `;
 
-            // Вставляем строку после текущей строки файла
             fileRow.parentNode.insertBefore(videoRow, fileRow.nextSibling);
 
             return videoRowId;
@@ -296,12 +292,10 @@
                 videoRow.remove();
             }
 
-            // Убираем активный класс со всех строк
             document.querySelectorAll('tbody tr.active').forEach(row => {
                 row.classList.remove('active');
             });
 
-            // Останавливаем проверку статуса
             if (statusCheckInterval) {
                 clearInterval(statusCheckInterval);
                 statusCheckInterval = null;
@@ -378,7 +372,6 @@
                     }
                 });
 
-            // Обработчик ошибок
             video.addEventListener('error', function(e) {
                 console.error('Video element error:', e);
                 if (video.error && statusDiv) {
@@ -398,39 +391,32 @@
         function playVideo(videoUrl, fileName, filePath, rowElement) {
             console.log('Requesting video:', videoUrl);
 
-            // Если уже открыто видео для этого файла, закрываем его
             const existingVideoRow = rowElement.nextElementSibling;
             if (existingVideoRow && existingVideoRow.classList.contains('video-row')) {
                 closeVideo(existingVideoRow.id);
                 return;
             }
 
-            // Закрываем предыдущее видео если оно было
             if (currentVideoRow) {
                 closeVideo(currentVideoRow);
             }
 
-            // Добавляем активный класс к строке
             document.querySelectorAll('tbody tr.active').forEach(row => {
                 row.classList.remove('active');
             });
             rowElement.classList.add('active');
 
-            // Создаём новую строку с видео
             const videoRowId = createVideoRow(rowElement, fileName, filePath, videoUrl);
             currentVideoRow = videoRowId;
             currentFileId = filePath;
 
-            // Показываем строку с анимацией
             setTimeout(() => {
                 document.getElementById(videoRowId).classList.add('show');
             }, 10);
 
-            // Делаем запрос к видео
             fetch(videoUrl)
                 .then(response => {
                     if (response.status === 202) {
-                        // Видео конвертируется
                         return response.json().then(data => {
                             const statusDiv = document.getElementById('status-' + videoRowId);
                             if (statusDiv) {
@@ -440,7 +426,6 @@
                             checkConversionStatus(videoUrl, fileName, filePath, videoRowId);
                         });
                     } else if (response.ok) {
-                        // Видео готово
                         loadAndPlayVideo(videoUrl, fileName, videoRowId);
                     } else {
                         throw new Error('Failed to load video');
@@ -456,7 +441,6 @@
                 });
         }
 
-        // Очистка при закрытии страницы
         window.addEventListener('beforeunload', () => {
             if (statusCheckInterval) {
                 clearInterval(statusCheckInterval);
